Bug 241934 - Fix PushManager in ephemeral sessions
Summary: Fix PushManager in ephemeral sessions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ben Nham
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-23 14:12 PDT by Ben Nham
Modified: 2022-06-24 11:22 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Nham 2022-06-23 14:12:25 PDT
PushManager does not behave correctly when invoked in an ephemeral session. For instance, PushManager.permissionState returns the underlying notification permission state for the origin in a persistent session, while PushManager.subscribe fails with an AbortError. This patch makes PushManager in ephemeral sessions behave as if a user had denied permissions to the origin.
Comment 1 Ben Nham 2022-06-23 14:13:35 PDT
rdar://94296914 (PushManager failures in private browsing should match real user behavior)
Comment 2 Ben Nham 2022-06-23 14:55:45 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1744
Comment 3 EWS 2022-06-24 11:22:22 PDT
Committed 251831@main (0570dfb680f5): <https://commits.webkit.org/251831@main>

Reviewed commits have been landed. Closing PR #1744 and removing active labels.