Fix PushManager in ephemeral sessions https://bugs.webkit.org/show_bug.cgi?id=241934

Reviewed by Geoffrey Garen.

PushManager does not behave correctly when invoked in an ephemeral session. For instance:

 - PushManager.subscribe and PushManager.getSubscription fail with an AbortError.
 - PushManager.permissionState returns the persistent session's notification permissions for the
   given origin.

This patch makes PushManager in ephemeral sessions behave as if a user denied notification
permissions for all origins (which users can already do in persistent sessions via the appropriate
checkbox). This also prevents these APIs from being used to detect private browsing mode.

* LayoutTests/http/tests/push-api/permissions-ephemeral-expected.txt: Added.
* LayoutTests/http/tests/push-api/permissions-ephemeral.html: Added.
* LayoutTests/http/tests/push-api/resources/subscribe-tests.js
* LayoutTests/http/tests/push-api/resources/subscribe-worker.js
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/win/TestExpectations:
* Source/WebKit/NetworkProcess/Notifications/NetworkNotificationManager.cpp:
(WebKit::NetworkNotificationManager::getPushSubscription):
(WebKit::NetworkNotificationManager::getPushPermissionState):
* Source/WebKit/WebProcess/WebCoreSupport/WebNotificationClient.cpp:
(WebKit::WebNotificationClient::requestPermission):
(WebKit::WebNotificationClient::checkPermission):

Canonical link: https://commits.webkit.org/251831@main